--- a/htdocs/whitesands.html
+++ b/htdocs/whitesands.html
@@ -22,5 +22,6 @@ A link to <a href="http://mblib.net:2048/login?auth=msel&url=http://altavista.co
 <a href="http://mblib.net:2048/mintaka.gotdns.org/test.html">Attemp A</a> gives a 404.<br />
 <a href="http://mintaka.gotdns.org.mblib.net:2048/test.html">Attemp B</a> gives address not found.<br />
 
+<p>this line was added just to test svn</p>
 </body>
 </html>
