removing cruft left over from the project that spawned fILL

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN">
 <html>
-<head><title>MAPLIN3</title>
-<link type="text/css" rel="stylesheet" href="/maplin3styles.1.7.css">
+<head><title>fILL</title>
+<link type="text/css" rel="stylesheet" href="/fILL.1.0.css">
 
 </head>
 <body>
 
 <DIV id="header">
   <div id="logo">
-    <div id="logo_title">MAPLIN-3</div>
-    <div id="logo_slogan">Manitoba Public Library Z39.50 search and request</div>
+    <div id="logo_title">fILL</div>
+    <div id="logo_slogan">Manitoba Public Libraries Interlibrary Loan</div>
   </div>
   <div id="header_quick_access">
-    <a href="/maplin3_user_guide.pdf">User's Guide (PDF)...</a>
+    <!--<a href="/maplin3_user_guide.pdf">User's Guide (PDF)...</a> -->
   </div>
 </DIV>
 
@@ -33,11 +33,11 @@
 
       <h1>Welcome!</h1>
       <br />
-      <p>Welcome to the Manitoba Public Libraries Network (Maplin) interlibrary-loan requesting system.</p>
+      <p>Welcome to the Manitoba Public Libraries Interlibrary-loan system.</p>
       <br />
       <p>There are separate login pages for:</p>
-      <br /><p><a href="/cgi-bin/public.cgi">Patrons of Manitoba Public Libraries</a></p>
-      <br /><p><a href="/cgi-bin/maplin3.cgi">Library staff</a></li></p>
+      <!-- <br /><p><a href="/cgi-bin/public.cgi">Patrons of Manitoba Public Libraries</a></p> -->
+      <br /><p><a href="/cgi-bin/lightning.cgi">Library staff</a></li></p>
       <p>
     </td>
   </tr>
@@ -47,7 +47,7 @@
 
 <div id="nav2">
   <ul>
-    <li><a href=/cgi-bin/maplin3.cgi?rm=environment_form>ENV display</a></li>
+    <li><a href=/cgi-bin/lightning.cgi?rm=environment_form>ENV display</a></li>
   </ul>
 </div>
 
