Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -31,19 +31,19 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <h3>Welcome to _f_ILL</h3>
+        <h3>Welcome to fILL</h3>
 
-<p>_f_ILL is the interlibrary loan management system in use by the public libraries in the province of Manitoba, Canada.</p>
+<p>fILL is the interlibrary loan management system in use by the public libraries in the province of Manitoba, Canada.</p>
 
-<p>An implementation of _f_ILL will be a single centrally-hosted web site (Linux, Apache, Perl, and PostgreSQL); clients - that is, interlibrary loans staff at participating libraries - simply need a Javascript-enabled browser.</p>
+<p>An implementation of fILL will be a single centrally-hosted web site (Linux, Apache, Perl, and PostgreSQL); clients - that is, interlibrary loans staff at participating libraries - simply need a Javascript-enabled browser.</p>
 
 <h3>Parallel searching of z39.50 targets</h3>
 
-<p>_f_ILL uses the excellent GPL-licensed Pazpar2 z39.50 middleware from Index Data (<a href="https://www.indexdata.com/pazpar2">Pazpar2 from IndexData</a>) to provide parallel searching of multiple library targets quickly, with merging, relevance ranking, record sorting, and faceted results.</p>
+<p>fILL uses the excellent GPL-licensed Pazpar2 z39.50 middleware from Index Data (<a href="https://www.indexdata.com/pazpar2">Pazpar2 from IndexData</a>) to provide parallel searching of multiple library targets quickly, with merging, relevance ranking, record sorting, and faceted results.</p>
 
 <h3>Interlibrary loan life-cycle management</h3>
 
-<p>_f_ILL handles the entire life cycle of interlibrary loans, from discovery through request, response, and return of the item.  Life cycle management is based on the message types and states in ISO 10161 (Interlibrary Loan Application Protocol Specification).  <a href="http://www.collectionscanada.gc.ca/iso/ill/stan1611.htm">ISO 10161</a></p>
+<p>fILL handles the entire life cycle of interlibrary loans, from discovery through request, response, and return of the item.  Life cycle management is based on the message types and states in ISO 10161 (Interlibrary Loan Application Protocol Specification).  <a href="http://www.collectionscanada.gc.ca/iso/ill/stan1611.htm">ISO 10161</a></p>
 
 <h3>Simple, powerful client-side</h3>
 
