add link to public-side

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -36,7 +36,7 @@
       <p>Welcome to the Manitoba Public Libraries Interlibrary-loan system.</p>
       <br />
       <p>There are separate login pages for:</p>
-      <!-- <br /><p><a href="/cgi-bin/public.cgi">Patrons of Manitoba Public Libraries</a></p> -->
+      <br /><p><a href="/cgi-bin/public.cgi">Patrons of Manitoba Public Libraries</a></p>
       <br /><p><a href="/cgi-bin/lightning.cgi">Library staff</a></li></p>
       <p>
     </td>
