--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -27,7 +27,7 @@
       </p>
 </div>
 
-<div id="main-info-right">
+<div id="main-info-right" class="tone-box">
         <h1>Welcome!</h1>
         <br />
         <p>Welcome to the Manitoba Public Libraries Interlibrary-loan system.</p>
@@ -35,8 +35,8 @@
         <p>There are separate login pages for:</p>
         <br />
         <p>
-  	     <a class="" href="/cgi-bin/public.cgi">Patrons of Manitoba Public Libraries</a>
-  	     <a class="" href="/cgi-bin/lightning.cgi">Library staff</a>
+  	     <a class="button-left" href="/cgi-bin/public.cgi">Patrons of Manitoba Public Libraries</a>
+  	     <a class="button-left" href="/cgi-bin/lightning.cgi">Library staff</a>
         </p>
 </div>
 
