change of buttons to regular class in <a> added margin top to welcome divs updated fill logo img

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -20,8 +20,8 @@
           <p>Welcome to the Manitoba Public Libraries Interlibrary-loan system.</p>
           <p>There are separate login pages for:</p>
           <br />
-    	     <a href="/cgi-bin/public.cgi"><button class="button-left">Patrons of Manitoba Public Libraries</a>
-    	     <a href="/cgi-bin/lightning.cgi"><button class="button-left">Library staff</a>
+    	     <a href="/cgi-bin/public.cgi" class="butlink">Patrons of Manitoba Public Libraries</a>
+    	     <a href="/cgi-bin/lightning.cgi" class="butlink">Library staff</a>
   </div>
 </div>
 
