update butlink again 2
reduce font size, display inline

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -19,8 +19,8 @@
           <h1>Welcome!</h1>
           <p>Welcome to the Manitoba Public Libraries Interlibrary-loan system.</p>
           <p>There are separate login pages for:</p>
-    	     <a href="/cgi-bin/public.cgi" id="butlink" class="button-left">Patrons of Manitoba Public Libraries</a>
-    	     <a href="/cgi-bin/lightning.cgi" id="butlink" class="button-left">Library staff</a>
+    	     <a href="/cgi-bin/public.cgi" id="butlink" class="button-left">Library Patrons</a>
+    	     <a href="/cgi-bin/lightning.cgi" id="butlink" class="button-left">Library Staff</a>
   </div>
 </div>
 
