--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -22,6 +22,10 @@
     	     <a href="/cgi-bin/public.cgi" id="butlink" class="button-left">Library Patrons</a>
     	     <a href="/cgi-bin/lightning.cgi" id="butlink" class="button-left">Library Staff</a>
   </div>
+  <div id="main-info-welcome">
+  <p>Fill is being redesigned to make it easier to search for the books you want here in Mantioba.<br />To make this better we, <strong>WANT YOUR FEEDBACK</strong> about our new site.
+  </p>
+  </div>
 </div>
 
 <!-- End content -->
