--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -9,7 +9,7 @@
 
 <div id="container">
 <!--header template from index file-->
-
+<div><br /></div>
   <div id="aside-img-welcome">
         <img src='/img/fill-logo.png'/>
         <p class="fill-tagline">connecting libraries, serving patrons.</p>
