Revert "temp remove of footer in index"
This reverts commit e86f53e9040afe8ffac73c3fe63848d5cbf9cdd7.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -30,7 +30,7 @@
 
 <!-- End content -->
 <!-- End content -->
-<!--<footer role="contentinfo">
+<footer role="contentinfo">
 <div id="nav2">
   
     <a href=/cgi-bin/lightning.cgi?rm=environment_form>ENV display</a>|<a href="?authen_logout=1">Log out</a>
@@ -43,7 +43,7 @@
 </body>
 </html>
 
-TMPL_INCLUDE NAME="footer.tmpl">-->
+<!--<TMPL_INCLUDE NAME="footer.tmpl">-->
 
 </body>
 </html>
