linked css in index

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -2,7 +2,7 @@
 <html>
 <head><title>fILL</title>
 <!--<link type="text/css" rel="stylesheet" href="/fILL.1.0.css">-->
-<link type="text/css" rel="stylesheet" href="/fILL-public-accessible.1.1.css">
+<link type="text/css" rel="stylesheet" href="/css/fILL-public-accessible.1.1.css">
 </head>
 
 <body>
