no border on logo

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -11,7 +11,7 @@
 <!--header template from index file-->
 <div><br /></div>
   <div id="aside-img-welcome">
-        <img src='/img/fill-logo.png'/>
+        <img src='/img/fill-logo.png' style="border:0px;"/>
         <p class="fill-tagline">connecting libraries, serving patrons.</p>
   </div>
 
