--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -18,8 +18,8 @@
   <div id="main-info-welcome">
           <p>Welcome to the Manitoba Public Libraries Interlibrary-loan system.</p>
           <p>There are separate login pages for:</p>
-    	     <a href="/cgi-bin/public.cgi" id="butlink" class="button-left">Library Patrons</a>
-    	     <a href="/cgi-bin/lightning.cgi" id="butlink" class="button-left">Library Staff</a>
+    	     <a href="/cgi-bin/public.cgi" id="butlink" >Library Patrons</a>
+    	     <a href="/cgi-bin/lightning.cgi" id="butlink" >Library Staff</a>
   </div>
   <div class="welcome-box">
   <p>Fill is being redesigned to make it easier to search for the books you want here in Mantioba.<br />To make this better we, <strong>WANT YOUR FEEDBACK</strong> about our new site.
