add original public UI in preparation for soft launch

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -18,7 +18,8 @@
   <div id="main-info-welcome">
           <p>Welcome to the Manitoba Public Libraries Interlibrary-loan system.</p>
           <p>There are separate login pages for:</p>
-    	     <a href="/cgi-bin/public.cgi" id="butlink" class="button-left">Library Patrons</a>
+    	     <a href="/cgi-bin/public-original.cgi" id="butlink" class="button-left">Library Patrons</a>
+    	     <a href="/cgi-bin/public.cgi" id="butlink" class="button-left">BETA: Patrons new look</a>
     	     <a href="/cgi-bin/lightning.cgi" id="butlink" class="button-left">Library Staff</a>
   </div>
   <div class="welcome-box">
@@ -44,6 +45,4 @@
 
 <!--<TMPL_INCLUDE NAME="footer.tmpl">-->
 
-</body>
-</html>
 
