New beta button text
trialling out the BETA text placing button underneath main login

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -5,24 +5,28 @@
 <link type="text/css" rel="stylesheet" href="/css/fILL-public-accessible.1.1.css">
 </head>
 <body>
+
 <div id="container">
 <!--header template from index file-->
 <div><br /></div>
 <div id="aside-img-welcome">
-<img src='/img/fill-logo.png' style="border:0px;"/>
-<p class="fill-tagline">connecting libraries, serving patrons.</p>
+	<img src='/img/fill-logo.png' style="border:0px;"/>
+	<p class="fill-tagline">connecting libraries, serving patrons.</p>
 </div>
+
 <div id="main-info-welcome">
-<p>Welcome to the Manitoba Public Libraries Interlibrary-loan system.</p>
-<p>There are separate login pages for:</p>
-<a href="/cgi-bin/public-original.cgi" id="butlink" >Library Patrons</a><br/>
-<a href="/cgi-bin/public.cgi" id="butlink" >BETA: Patrons new look</a><br/>
-<a href="/cgi-bin/lightning.cgi" id="butlink" >Library Staff</a><br/>
+	<p>Welcome to the Manitoba Public Libraries Interlibrary-loan system.</p>
+	<p>There are separate login pages for:</p>
+	<a href="/cgi-bin/public-original.cgi" id="butlink" >Library Patrons</a><br/>
+	<a href="/cgi-bin/lightning.cgi" id="butlink" >Library Staff</a><br/>
 </div>
+
 <div class="welcome-box">
-<p>Fill is being redesigned to make it easier to search for the books you want here in Mantioba.<br />To make this better we, <strong>WANT YOUR FEEDBACK</strong> about our new site.
-</p>
+	<p>fILL is getting a brand new look! All the functionality of fILL remains the same but the site will now be more user friendly and have enhanced accessibility features. Click on the link below to try it out.</p>
+	<a href="/cgi-bin/public.cgi" id="butlink" >Try BETA version!</a><br/>
+	<p>You will be able to use the beta version to order books and access your account in the same way. However some aspects of the look and functionally may appear different</p>
 </div>
+
 </div>
 <!-- End content -->
 <!-- End content -->
