removed br on butlink

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -17,8 +17,8 @@
 <div id="main-info-welcome">
 	<p>Welcome to the Manitoba Public Libraries Interlibrary-loan system.</p>
 	<p>There are separate login pages for:</p>
-	<a href="/cgi-bin/public-original.cgi" id="butlink" >Library Patrons</a><br/>
-	<a href="/cgi-bin/lightning.cgi" id="butlink" >Library Staff</a><br/>
+	<a href="/cgi-bin/public-original.cgi" id="butlink" >Library Patrons</a>
+	<a href="/cgi-bin/lightning.cgi" id="butlink" >Library Staff</a>
 </div>
 
 <div class="welcome-box">
