--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -22,9 +22,9 @@
 </div>
 
 <div class="welcome-box">
-	<p><strong>fILL</strong> is getting a brand new look! All the functionality of <strong>fILL</strong> remains the same but the site will now be more user friendly and have enhanced accessibility features. Click on the link below to try it out.</p>
+	<p><strong>fILL</strong> is getting a brand new look! All the functionality of <strong>fILL</strong> remains the same but the site will be more user friendly and have enhanced accessibility features. Click on the link below to try it out.</p>
 	<a href="/cgi-bin/public.cgi" id="butlink" >Try BETA version!</a><br/>
-	<p>You will be able to use the beta version to order books and access your account in the same way. However some aspects of the look and functionally may appear different</p>
+	<p>You will be able to use the BETA version to order books and access your account in the same way. However some aspects of the look and functionally may appear different.</p>
 </div>
 
 </div>
