index page header

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -4,6 +4,8 @@
 <!--<link type="text/css" rel="stylesheet" href="/fILL.1.0.css">-->
 <link type="text/css" rel="stylesheet" href="/css/fILL-public-accessible.1.1.css">
 </head>
+<TMPL_INCLUDE NAME="header.tmpl">
+
 <body>
 
 <div id="container">
