--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -1,6 +1,16 @@
-<TMPL_INCLUDE NAME="header.tmpl">
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN">
+<html>
+<head><title>fILL</title>
+<!--<link type="text/css" rel="stylesheet" href="/fILL.1.0.css">-->
+<link type="text/css" rel="stylesheet" href="/css/fILL-public-accessible.1.1.css">
+</head>
+
+
+
+<body>
 
 <div id="container">
+<TMPL_INCLUDE NAME="header.tmpl">
 <!--header template from index file-->
 
 <div id="aside-img-welcome">
@@ -24,7 +34,7 @@
 </div>
 <!-- End content -->
 <!-- End content -->
-<!--<<footer role="contentinfo">
+<footer role="contentinfo">
 <div id="nav2">
 <a href=/cgi-bin/lightning.cgi?rm=environment_form>ENV display</a>|<a href="?authen_logout=1">Log out</a>
 <p><TMPL_VAR name="username"><TMPL_VAR name="lid"><TMPL_VAR name="library"></p>
@@ -32,6 +42,7 @@
 </footer>
 <img class="bison" alt="Manitoba Bison Logo" title="Service provided by the Government of Manitoba" src="/img/manitoba.gif">
 </body>
-</html>-->
-<TMPL_INCLUDE NAME="footer.tmpl">
-
+</html>
+<!--<TMPL_INCLUDE NAME="footer.tmpl">-->
+</body>
+</html>
