--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -15,7 +15,8 @@
 
 <div id="aside-img-welcome">
 	<img src='/img/fill-logo.png' style="border:0px;"/>
-	<p class="fill-tagline">connecting libraries, serving patrons.</p><p><br /></p>
+	<p class="fill-tagline">connecting libraries, serving patrons.</p>
+	<p><br /></p>
 </div>
 
 <div id="main-info-welcome">
