added non breaking space

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -14,9 +14,9 @@
 <!--header template from index file-->
 
 <div id="aside-img-welcome">
-	<img src='/img/fill-logo.png' style="border:0px;"/>
+	<img src='/img/fill-logo.png'>
 	<p class="fill-tagline">connecting libraries, serving patrons.</p>
-	<p><br /></p>
+	<p>&nbsp;<br /></p>
 </div>
 
 <div id="main-info-welcome">
