more changes to index

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -29,8 +29,8 @@
 </nav>
 
 <div id="aside-img-welcome">
-	<img src='/img/fill-logo.png'>
-	<p class="fill-tagline">connecting libraries, serving patrons.</p>
+	<img src='/img/card_catalogue.jpg'>
+	<p class="note">Image care of <a href="https://www.flickr.com/photos/misshaley/515045131/">Haley</a></p>
 </div>
 
 <div id="main-info-welcome">
