button style on index

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -36,8 +36,8 @@
 <div id="main-info-welcome">
 	<p>Welcome to the Manitoba Public Libraries Interlibrary-loan system.</p>
 	<p>There are separate login pages for:</p>
-	<a href="/cgi-bin/public-original.cgi"><button id="but-link">Library Patrons</button></a>
-	<a href="/cgi-bin/lightning.cgi"><button d="butlink">Library Staff</button></a>
+	<a href="/cgi-bin/public-original.cgi" id="but-link">Library Patrons</a>
+	<a href="/cgi-bin/lightning.cgi" id="butlink">Library Staff</a>
 </div>
 
 <div class="welcome-box">
