--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -1,6 +1,18 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN">
 <html>
 <head><title>fILL</title>
+
+<!--[if lt IE 9]>
+  <script>
+    var e = ("abbr,article,aside,audio,canvas,datalist,details," +
+      "figure,footer,header,main,mark,menu,meter,nav,output," +
+      "progress,section,time,video").split(',');
+    for (var i = 0; i < e.length; i++) {
+      document.createElement(e[i]);
+    }
+  </script>
+<![endif]-->
+
 <!--<link type="text/css" rel="stylesheet" href="/fILL.1.0.css">-->
 <link type="text/css" rel="stylesheet" href="/css/fILL-public-accessible.1.1.css">
 </head>
