small type fixes to index

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -46,7 +46,7 @@
 </div>
 
 <div id="main-info-welcome">
-	<p>Welcome to the Manitoba Public Libraries Interlibrary-loan system.</p>
+	<p>Welcome to the Manitoba public libraries' interlibrary loan system.</p>
 	<p>There are separate login pages for:</p>
 	<a href="/cgi-bin/public-original.cgi"><button id="butlink">Library Patrons</button></a>
 	<a href="/cgi-bin/lightning.cgi"><button id="butlink">Library Staff</button></a>
