update to index

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -23,12 +23,16 @@
 
 <div id="container">
 <!--***************ARIA MARKER 'BANNER'***************-->
-<header role="banner">
-  <div id="header_logo_div">
-    <a href="/"><img src="/img/fill-logo.png" class="fill-logo" alt="fill"></a><p class="fill-tagline">connecting libraries, serving patrons.</p>
-  </div>
+  <header role="banner">
 
-</header>
+    <div id="header-left">
+      <div id="fill-logo"><a href="/"><img src="/img/fill-logo.png" alt="fill"></a></div>
+      <div id="fill-tagline"><p id="fill-tagline">connecting libraries, serving patrons.</p></div>
+    </div>
+
+    <div id="header-right">
+    </div>
+
   
 <!--***************ARIA MARKER 'NAVIGATION'***************-->
 <nav role="navigation">
