--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -37,10 +37,8 @@
 <!--***************ARIA MARKER 'NAVIGATION'***************-->
 <nav role="navigation">
   <ul class="nav inline-items">
-    <li><a id="menu_search" href="/cgi-bin/public.cgi?rm=search_form">Home</a></li>
-    <li><a id="menu_about" href="/cgi-bin/public.cgi?rm=about_form">Help</a></li>
-    <li><a id="menu_faq" href="/cgi-bin/public.cgi?rm=faq_form">FAQ</a></li>
-    <li><a id="menu_contact" href="/cgi-bin/public.cgi?rm=contact_form">Contact</a></li>
+    <li><a id="menu_search" href="/">Welcome</a></li>
+    <li><a id="menu_new" href="/cgi-bin/public.cgi?rm=new_form">New to fILL?</a></li>
   </ul>
 </nav>
 
