added new-user pre-login info page

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -37,32 +37,34 @@
 <!--***************ARIA MARKER 'NAVIGATION'***************-->
 <nav role="navigation">
   <ul class="nav inline-items">
-    <li><a id="menu_search" href="/">Welcome</a></li>
-    <li><a id="menu_new" href="/cgi-bin/public.cgi?rm=new_form">New to fILL?</a></li>
+    <li><a id="menu_search" class="current_tab" href="/">Welcome</a></li>
+    <li><a id="menu_new" href="/new.html">New to fILL?</a></li>
   </ul>
 </nav>
 
+<!-- Content -->
+
 <div id="aside-img-welcome">
-	<img src='/img/card_catalogue.jpg'>
-	<p class="note">Image care of <a href="https://www.flickr.com/photos/misshaley/515045131/">Haley</a></p>
+  <img src='/img/card_catalogue.jpg'>
+  <p class="note">Image care of <a href="https://www.flickr.com/photos/misshaley/515045131/">Haley</a></p>
 </div>
 
 <div id="main-info-welcome">
-	<p>Welcome to the Manitoba public libraries' interlibrary loan system.</p>
-	<p>There are separate login pages for:</p>
-	<a href="/cgi-bin/public-original.cgi"><button id="butlink">Library Patrons</button></a>
-	<a href="/cgi-bin/lightning.cgi"><button id="butlink">Library Staff</button></a>
+  <p>Welcome to the Manitoba public libraries' interlibrary loan system.</p>
+  <p>There are separate login pages for:</p>
+  <a href="/cgi-bin/public-original.cgi"><button id="butlink">Library Patrons</button></a>
+  <a href="/cgi-bin/lightning.cgi"><button id="butlink">Library Staff</button></a>
 </div>
 
 <div class="welcome-box">
-<p>Use the new interface for fILL</p>
-	<p><strong>fILL</strong> is getting a brand new look! All the functionality of <strong>fILL</strong> remains the same but the site has been redesigned to be more user friendly and includes enhanced accessibility features. Click on the link below to try it out.</p>
-	<a href="/cgi-bin/public.cgi" id="butlink" >Try BETA version!</a><br/>
-	<p>You will be able to use the BETA version to order books and access your account in the same way. However some aspects of the look and functionally may appear different.</p>
+  <p><strong>*NOTICE*</strong></p>
+  <p>fILL is getting a new visual identity and our team has incorporated key elements to improve accessibility and user experience.  We are beta-testing the new library patron interface in an effor to enhance patron direct-discovery to make interlibrary loan more efficient province-wide.  Click the link below to use the new interface.</p>
+  <a href="/cgi-bin/public.cgi" id="butlink" >Use the NEW patron site!</a><br/>
+  <p>You will be able to use the new version to order books and access your account in the same way. However some aspects of the look and functionally will appear different.  If you have suggestions on how to improve fILL please advise your local library staff.</p>
 </div>
 
 </div>
-<!-- End content -->
+
 <!-- End content -->
 <footer role="contentinfo">
 <div id="nav2">
