removed link on index to welcome

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -26,7 +26,7 @@
   <header role="banner">
 
     <div id="header-left">
-      <div id="fill-logo"><a href="/"><img src="/img/fill-logo.png" alt="fill"></a></div>
+      <div id="fill-logo"><a href=""><img src="/img/fill-logo.png" alt="fill"></a></div>
       <div id="fill-tagline"><p id="fill-tagline">connecting libraries, serving patrons.</p></div>
     </div>
 
