--- a/htdocs/new.html
+++ b/htdocs/new.html
@@ -44,7 +44,12 @@
 
 <!-- Content -->
 <div style="clear:both">
+  <div id="aside-img-left">
+      <img src='/img/fill-help.jpg' alt="Three children sitting on a couch in the library reading books"/>
+      <p class="note">Image care of <a href="https://www.flickr.com/photos/sanjoselibrary/2839834669/">the San Jose Library</a></p>
+  </div>
 
+  <div id="main-info-right" class="tone-box">
   <h2>About fILL</h2>
   <p>fILL is the interlibrary loan management system for all Manitoba public libraries. It connects your local library to the millions of items available in Manitoba&rsquo;s libraries.</p>
   <p>If you are unable to find an item after searching your library&rsquo;s catalogue you can use fILL to find it online and have it delivered to your local public library.</p>
@@ -58,14 +63,14 @@
       <li>On the login page, click the "Sign up!" button</li>
       <li>Follow the instructions to select your home library</li>
       <li>Choose a username and password</li>
-      <ol>
+      </ol>
   </p>
 
   <h3>Privacy</h3>
   <p>
     fILL does not keep a record of your search history nor  does it keep a record of request transactions after borrowed items are returned. Logging into your account is necessary in order for your library to validate the request; some non-identifying data may be retained for statistical purposes.
   </p>
-
+</div><!--div id main info right-->
 
 </div>
 <!-- End content -->
