language cleanup and minor layout change

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -49,18 +49,18 @@
   <p class="note">Image care of <a href="https://www.flickr.com/photos/misshaley/515045131/">Haley</a></p>
 </div>
 
+<div class="welcome-box">
+  <p><strong>Library patrons:</strong></p>
+  <p>fILL is getting a new look, to improve user experience and accessibility.  The updated version of fILL is fully functional, and you can use it to access your account and request your interlibrary loan items, just as you would using the old fILL site.</p>
+  <a href="/cgi-bin/public.cgi" id="butlink" >Use the NEW patron site!</a><br/>
+  <p>Help make the new fILL website better: if you have feedback about the new look please contact your local public library.</p>
+</div>
+
 <div id="main-info-welcome">
   <p>Welcome to the Manitoba public libraries' interlibrary loan system.</p>
   <p>There are separate login pages for:</p>
   <a href="/cgi-bin/public-original.cgi"><button id="butlink">Library Patrons</button></a>
   <a href="/cgi-bin/lightning.cgi"><button id="butlink">Library Staff</button></a>
-</div>
-
-<div class="welcome-box">
-  <p><strong>*NOTICE*</strong></p>
-  <p>fILL is getting a new visual identity and our team has incorporated key elements to improve accessibility and user experience.  We are beta-testing the new library patron interface in an effor to enhance patron direct-discovery to make interlibrary loan more efficient province-wide.  Click the link below to use the new interface.</p>
-  <a href="/cgi-bin/public.cgi" id="butlink" >Use the NEW patron site!</a><br/>
-  <p>You will be able to use the new version to order books and access your account in the same way. However some aspects of the look and functionally will appear different.  If you have suggestions on how to improve fILL please advise your local library staff.</p>
 </div>
 
 </div>
