--- a/htdocs/new.html
+++ b/htdocs/new.html
@@ -47,19 +47,20 @@
 
   <h2>About fILL</h2>
   <p>fILL is the interlibrary loan management system for all Manitoba public libraries. It connects your local library to the millions of items available in Manitoba&rsquo;s libraries.</p>
-  <p>If you are unable to find an item after searching your library&rsquo;s catalogue you can use fILL to find it online and have it delivered to your local public library.</p>
-  <p>fILL enables library patrons like you to quickly and easily search the catalogues of many Manitoba public libraries at the same time. When you find the item that you'd like to request, fILL prepares the interlibrary loan request for your public library and the local library staff to try to borrow the item from the lending library for you.</p>
+  <p>If you are unable to find an item after searching your library&rsquo;s catalogue you can use fILL to find it online and have it delivered to your public library.</p>
+  <p>fILL enables library patrons to quickly and easily search the catalogues of many Manitoba public libraries at the same time. When you find the item that you like, fILL prepares the request for your local library staff to try to borrow the item from the lending library for you.</p>
 
   <h2>Creating an account</h2>
-  <p>You will need to create a fILL account to use the system, so that when you make a request for a book your library will know who the request is for.</p>
+  <p>To use fILL you will need to create an account.  And to create an account all you need is a valid Manitoba public library card.</p>
   <p>Creating an accout is easy... 
     <ol>
-      <li>From the Welcome page, click the button to log in</li>
+      <li>From the Welcome page, click the "Use the NEW patron site!" button</li>
       <li>On the login page, click the "Sign up!" button</li>
       <li>Follow the instructions to select your home library</li>
-      <li>Choose a username and password</li>
+      <li>Enter your name and library card number, and choose a username and password</li>
       <ol>
   </p>
+  <p>When your account is created, you will be able to log in and start using fILL.</p>
 
   <h3>Privacy</h3>
   <p>
