--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -57,7 +57,7 @@
     <p>Help make the new fILL website better: if you have feedback about the new look please contact your local public library.</p>
 
 
-  <div class="tone-box">
+  <div id="welcome-box" class="tone-box">
     <p>Welcome to the Manitoba public libraries' interlibrary loan system.</p>
     <p>There are separate login pages for:</p>
     <a href="/cgi-bin/public-original.cgi"><button id="butlink">Library Patrons</button></a>
