--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -52,7 +52,7 @@
 <div id="main-info-welcome">
 
     <p><strong>Library patrons:</strong></p>
-    <p>fILL is getting a new look, to improve user experience and accessibility.  The updated version of fILL is fully functional, and you can use it to access your account and request your interlibrary loan items, just as you would using the old fILL site.</p>
+    <p>fILL is getting a new look to improve user experience and accessibility.  The updated version of fILL is fully functional and you can use it to access your account and request your interlibrary loan items, just as you would using the old fILL site.</p>
     <a href="/cgi-bin/public.cgi" id="butlink" >Use the NEW patron site!</a><br/>
     <p>Help make the new fILL website better: if you have feedback about the new look please contact your local public library.</p>
 
