--- a/htdocs/new.html
+++ b/htdocs/new.html
@@ -53,11 +53,11 @@
   <h2>About fILL</h2>
   <p>fILL is the interlibrary loan management system for all Manitoba public libraries. It connects your local library to the millions of items available in Manitoba&rsquo;s libraries.</p>
   <p>If you are unable to find an item after searching your library&rsquo;s catalogue you can use fILL to find it online and have it delivered to your public library.</p>
-  <p>fILL enables library patrons to quickly and easily search the catalogues of many Manitoba public libraries at the same time. When you find the item that you like, fILL prepares the request for your local library staff to try to borrow the item from the lending library for you.</p>
+  <p>fILL enables library patrons to quickly and easily search the catalogues of many Manitoba public libraries at the same time. When you request an item through fILL your local library staff will try to borrow the item from the lending library for you.</p>
 
   <h2>Creating an account</h2>
-  <p>To use fILL you will need to create an account.  And to create an account all you need is a valid Manitoba public library card.</p>
-  <p>Creating an accout is easy... 
+  <p>To use fILL you will need to create an account.  All you need is a valid Manitoba public library card.</p>
+  <p>Creating an account is easy... 
     <ol>
       <li>From the Welcome page, click the "Use the NEW patron site!" button</li>
       <li>On the login page, click the "Sign up!" button</li>
@@ -65,7 +65,7 @@
       <li>Enter your name and library card number, and choose a username and password</li>
     </ol>
   </p>
-  <p>When your account is created, you will be able to log in and start using fILL.</p>
+  <p>When your account is created you will be able to log in and start using fILL.</p>
 
   <h3>Privacy</h3>
   <p>
