IE 8 hack for buttons

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -4,7 +4,7 @@
 
 <!--[if lt IE 9]>
   <script>
-    var e = ("abbr,article,aside,audio,canvas,datalist,details," +
+    var e = ("abbr,article,aside,audio,button,canvas,datalist,details," +
       "figure,footer,header,main,mark,menu,meter,nav,output," +
       "progress,section,time,video").split(',');
     for (var i = 0; i < e.length; i++) {
@@ -62,6 +62,10 @@
     <p>There are separate login pages for:</p>
     <a href="/cgi-bin/public-original.cgi"><button id="butlink">Library Patrons</button></a>
     <a href="/cgi-bin/lightning.cgi"><button id="butlink">Library Staff</button></a>
+<!--
+    <a href="/cgi-bin/public-original.cgi">Library Patrons</a>
+    <a href="/cgi-bin/lightning.cgi">Library Staff</a>
+-->
   </div>
 
 </div>
