more hacks for IE 8

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -4,7 +4,7 @@
 
 <!--[if lt IE 9]>
   <script>
-    var e = ("abbr,article,aside,audio,button,canvas,datalist,details," +
+    var e = ("abbr,article,aside,audio,canvas,datalist,details," +
       "figure,footer,header,main,mark,menu,meter,nav,output," +
       "progress,section,time,video").split(',');
     for (var i = 0; i < e.length; i++) {
@@ -60,8 +60,8 @@
   <div id="welcome-box" class="tone-box">
     <p>Welcome to the Manitoba public libraries' interlibrary loan system.</p>
     <p>There are separate login pages for:</p>
-    <a href="/cgi-bin/public-original.cgi"><button id="butlink">Library Patrons</button></a>
-    <a href="/cgi-bin/lightning.cgi"><button id="butlink">Library Staff</button></a>
+    <a href="/cgi-bin/public-original.cgi" id="butlink">Library Patrons</a>
+    <a href="/cgi-bin/lightning.cgi" id="butlink">Library Staff</a>
 <!--
     <a href="/cgi-bin/public-original.cgi">Library Patrons</a>
     <a href="/cgi-bin/lightning.cgi">Library Staff</a>
