alt text for aside

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -45,7 +45,7 @@
 <!-- Content -->
 
 <div id="aside-img-welcome">
-  <img src='/img/card_catalogue.jpg'>
+  <img src='/img/card_catalogue.jpg' alt="open library book">
   <p class="note">Image care of <a href="https://www.flickr.com/photos/misshaley/515045131/">Haley</a></p>
 </div>
 
