updated nav to match new id

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -35,8 +35,8 @@
 
   
 <!--***************ARIA MARKER 'NAVIGATION'***************-->
-<nav role="navigation">
-  <ul class="nav inline-items">
+<nav role="navigation" id="pub-nav-primary">
+  <ul class="inline-items">
     <li><a id="menu_search" class="current_tab" href="">Welcome</a></li>
     <li><a id="menu_new" href="/new.html">New to fILL?</a></li>
   </ul>
