--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -53,15 +53,15 @@
 
     <p><strong>Library patrons:</strong></p>
     <p>fILL is getting a new look to improve user experience and accessibility.  The updated version of fILL is fully functional and you can use it to access your account and request your interlibrary loan items, just as you would using the old fILL site.</p>
-    <a href="/cgi-bin/public.cgi" id="butlink" >Use the NEW patron site!</a><br/>
+    <a href="/cgi-bin/public.cgi" id="butlink" class="library-button">Use the NEW patron site!</a><br/>
     <p>Help make the new fILL website better: if you have feedback about the new look please contact your local public library.</p>
 
 
   <div id="welcome-box" class="tone-box">
     <p>Welcome to the Manitoba public libraries' interlibrary loan system.</p>
     <p>There are separate login pages for:</p>
-    <a href="/cgi-bin/public-original.cgi" id="butlink">Library Patrons</a>
-    <a href="/cgi-bin/lightning.cgi" id="butlink">Library Staff</a>
+    <a href="/cgi-bin/public-original.cgi" id="butlink" class="library-style">Library Patrons</a>
+    <a href="/cgi-bin/lightning.cgi" id="butlink" class="library-style">Library Staff</a>
 <!--
     <a href="/cgi-bin/public-original.cgi">Library Patrons</a>
     <a href="/cgi-bin/lightning.cgi">Library Staff</a>
