--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -79,7 +79,11 @@
 <p><TMPL_VAR name="username"><TMPL_VAR name="lid"><TMPL_VAR name="library"></p>
 </div>
 </footer>
-<img class="bison" alt="Manitoba Bison Logo" title="Service provided by the Government of Manitoba" src="/img/manitoba.gif">
+
+<div id="bison-container">
+<img class="bison" alt="Manitoba Bison Logo" title="Coordinated by the Public Library Service Branch of the Government of Manitoba Tourism, Culture, Heritage and Consumer Protection" src="/img/manitoba.gif">
+</div>
+
 </body>
 </html>
 <!--<TMPL_INCLUDE NAME="footer.tmpl">-->
