--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -52,7 +52,7 @@
 <div id="main-info-welcome">
 
   <div id="welcome-box" class="tone-box">
-    <p><span class="welcome-text">Welcome to the Manitoba public libraries' interlibrary loan system.</span></p>
+    <p><span id="welcome-text">Welcome to the Manitoba public libraries' interlibrary loan system.</span></p>
     <p>There are separate login pages for:</p>
     <a href="/cgi-bin/public.cgi" id="butlink" class="public-style">Library Patrons</a>
     <a href="/cgi-bin/lightning.cgi" id="butlink" class="library-style">Library Staff</a>
