updates to welcome page

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -32,7 +32,7 @@
 
     <div id="header-right">
     </div>
-
+  </header>
   
 <!--***************ARIA MARKER 'NAVIGATION'***************-->
 <nav role="navigation" id="pub-nav-primary">
