moved text out of welcome box

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -50,10 +50,9 @@
 </div>
 
 <div id="main-info-welcome">
-
-  <div id="welcome-box" class="tone-box">
-    <p><span id="welcome-text">Welcome to the Manitoba public libraries' interlibrary loan system.</span></p>
+ <p id="welcome-text">Welcome to the Manitoba public libraries' interlibrary loan system.</p>
     <p>There are separate login pages for:</p>
+  <div id="welcome-box" class="tone-box">
     <a href="/cgi-bin/public.cgi" id="butlink" class="public-style">Library Patrons</a>
     <a href="/cgi-bin/lightning.cgi" id="butlink" class="library-style">Library Staff</a>
 <!--
