updates to welcome box

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -51,8 +51,9 @@
 
 <div id="main-info-welcome">
  <p id="welcome-text">Welcome to the Manitoba public libraries' interlibrary loan system.</p>
-    <p>There are separate login pages for:</p>
+ 
   <div id="welcome-box" class="tone-box">
+     <p>There are separate login pages for:</p><br>
     <a href="/cgi-bin/public.cgi" id="butlink" class="public-style">Library Patrons</a>
     <a href="/cgi-bin/lightning.cgi" id="butlink" class="library-style">Library Staff</a>
 <!--
