--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -15,6 +15,7 @@
 
 <!--<link type="text/css" rel="stylesheet" href="/fILL.1.0.css">-->
 <link type="text/css" rel="stylesheet" href="/css/fILL-public-accessible.1.1.css">
+<link type="text/css" rel="stylesheet" href="/css/themes-library-colors.css">
 </head>
 
 
