added theme colours css to new-to-fILL page

--- a/htdocs/new.html
+++ b/htdocs/new.html
@@ -15,6 +15,7 @@
 
 <!--<link type="text/css" rel="stylesheet" href="/fILL.1.0.css">-->
 <link type="text/css" rel="stylesheet" href="/css/fILL-public-accessible.1.1.css">
+<link type="text/css" rel="stylesheet" href="/css/themes-library-colors.css">
 </head>
 
 
@@ -35,8 +36,8 @@
 
   
 <!--***************ARIA MARKER 'NAVIGATION'***************-->
-<nav role="navigation">
-  <ul class="nav inline-items">
+<nav role="navigation" id="pub-nav-primary">
+  <ul class="inline-items">
     <li><a id="menu_search" href="/">Welcome</a></li>
     <li><a id="menu_new" class="current_tab" href="/new.html">New to fILL?</a></li>
   </ul>
