hid logo from index

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -75,9 +75,9 @@
 </div>
 </footer>
 
-<div id="bison-container">
+<!--<div id="bison-container">
 <img class="bison" alt="Manitoba Bison Logo" title="Coordinated by the Public Library Service Branch of the Government of Manitoba Tourism, Culture, Heritage and Consumer Protection" src="/img/manitoba.gif">
-</div>
+</div>-->
 
 </body>
 </html>
