--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -15,10 +15,8 @@
 
 <!--<link type="text/css" rel="stylesheet" href="/fILL.1.0.css">-->
 <link type="text/css" rel="stylesheet" href="/css/fILL-public-accessible.1.1.css">
-<link type="text/css" rel="stylesheet" href="/css/themes-library-colors.css">
+<link type="text/css" rel="stylesheet" href="/css/themes-public-default.css">
 </head>
-
-
 
 <body>
 
@@ -64,7 +62,6 @@
   </div>
 
 </div>
-
 </div>
 
 <!-- End content -->
@@ -75,12 +72,10 @@
 </div>
 </footer>
 
-<!--<div id="bison-container">
+<div id="bison-container">
 <img class="bison" alt="Manitoba Bison Logo" title="Coordinated by the Public Library Service Branch of the Government of Manitoba Tourism, Culture, Heritage and Consumer Protection" src="/img/manitoba.gif">
-</div>-->
+</div>
 
-</body>
-</html>
 <!--<TMPL_INCLUDE NAME="footer.tmpl">-->
 </body>
 </html>
