--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -16,6 +16,8 @@
 <!--<link type="text/css" rel="stylesheet" href="/fILL.1.0.css">-->
 <link type="text/css" rel="stylesheet" href="/css/fILL-public-accessible.1.1.css">
 <link type="text/css" rel="stylesheet" href="/css/themes-public-default.css">
+<link type"text/css" rel="stylesheet" href="/css/fILL-media.1.0.css">
+
 </head>
 
 <body>
