--- a/htdocs/new.html
+++ b/htdocs/new.html
@@ -44,7 +44,8 @@
 </nav>
 
 <!-- Content -->
-<div style="clear:both">
+<div id="clear"></div>
+
   <div id="aside-img-left">
       <img src='/img/fill-help.jpg' alt="Three children sitting on a couch in the library reading books"/>
       <p class="note">Image care of <a href="https://www.flickr.com/photos/sanjoselibrary/2839834669/">the San Jose Library</a></p>
@@ -74,7 +75,6 @@
   </p>
 </div><!--div id main info right-->
 
-</div>
 <!-- End content -->
 
 <footer role="contentinfo">
